Jira RPU-170 Leaderboard gravatar img and placeholder back in place Jira RPU-171 Badges Safari bug resolution through redo of regular expression extract for css badge img Jira RPU-135 Gnav dropdown theming for Suggested for Me visibility fix, markup had changed from one field to another

--- a/sites/all/themes/elx_front/sass/components/header/_header.scss
+++ b/sites/all/themes/elx_front/sass/components/header/_header.scss
@@ -715,7 +715,7 @@ div#block-menu-menu-header-user-menu {
 
       .view-display-id-suggested {
         .views-field-field-headline {
-          height: 25px;
+          height: 0;
 
           .field-content a {
             color: #9eafff;
@@ -725,8 +725,19 @@ div#block-menu-menu-header-user-menu {
         }
 
         .views-field-field-display-title {
-          display: none;
+          display: block;
+
+          height: 25px;
+
+          .field-content a {
+            color: #9eafff;
+            font-size: 16px;
+            text-indent: 0;
+
+            width: 230px;
+          }
         }
+
       }
     }
 
