--- a/sites/all/themes/elx_front/sass/components/levels/_levels.scss
+++ b/sites/all/themes/elx_front/sass/components/levels/_levels.scss
@@ -275,16 +275,17 @@ body.page-levels-in-progress {
           }
         }
       }
+
+      .pane-badges-my-badges {
+        background-color: #1e2341;
+        margin-top: 1px;
+
+        h2.pane-title {
+          padding-left: 5px;
+        }
+
+      }
     }
-/*
-      .pane-dashboard-user-activities-suggested {
-      .
-    margin-top: 0;
-    padding-top: 0;
-    position: relative;
-    top: -15px;
-    }
-*/
 
   }
 
